--- a/BBDBank/Views/Shared/_Layout.cshtml
+++ b/BBDBank/Views/Shared/_Layout.cshtml
@@ -30,15 +30,10 @@
     <!-- AdminBSB Themes. You can choose a theme from css/themes instead of get all themes -->
     <link href="~/css/themes/all-themes.css" rel="stylesheet" />
 </head>
-<body>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; 2017 - BBDBank</p>
-        </footer>
-    </div>
-
+	
+<body class="theme-blue">
+		
+    @RenderBody()
 
     <!-- Jquery Core Js -->
     <script src="~/plugins/jquery/jquery.min.js"></script>
