--- a/BBDBank/wwwroot/css/style.css
+++ b/BBDBank/wwwroot/css/style.css
@@ -8040,3 +8040,7 @@ html.ie11 .dropdown-menu ul.menu li a {
 html.ie11 .bs-searchbox .form-control {
   width: 90%; }
 
+.fb_posts {
+    max-width: 100%;
+    overflow: auto;
+}
