--- a/BBDBank/Views/Home/Index.cshtml
+++ b/BBDBank/Views/Home/Index.cshtml
@@ -2,6 +2,8 @@
     ViewData["Title"] = "Home Page";
 }
 
+
+<body class="theme-blue">
     <!-- Page Loader -->
     <div class="page-loader-wrapper">
         <div class="loader">
@@ -572,3 +574,4 @@
             </div>
         </div>
     </section>
+</body>
