--- a/BBDBank/Views/Shared/_Layout.cshtml
+++ b/BBDBank/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <title>Welcome To | Bootstrap Based Admin Template - Material Design</title>
+    <title>Welcome To BBD Rewards</title>
     <!-- Favicon-->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
@@ -30,9 +30,7 @@
     <!-- AdminBSB Themes. You can choose a theme from css/themes instead of get all themes -->
     <link href="~/css/themes/all-themes.css" rel="stylesheet" />
 </head>
-	
-<body class="theme-blue">
-		
+			
     @RenderBody()
 
     <!-- Jquery Core Js -->
@@ -78,5 +76,4 @@
     <script src="~/js/demo.js"></script>
 
     @RenderSection("Scripts", required: false)
-</body>
 </html>
