Adding Challenge functionality

--- a/BBDBank/Views/Home/Index.cshtml
+++ b/BBDBank/Views/Home/Index.cshtml
@@ -307,44 +307,52 @@
             <!-- Widgets -->
             <div class="row clearfix">
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                    <div class="info-box bg-pink hover-expand-effect">
-                        <div class="icon">
-                            <i class="material-icons">code</i>
+                    <a href="/Home/ChallengePanel">
+                        <div class="info-box bg-pink hover-expand-effect">
+                            <div class="icon">
+                                <i class="material-icons">code</i>
+                            </div>
+                            <div class="content">
+                                <div class="text">BBD TECH</div>
+                            </div>
                         </div>
-                        <div class="content">
-                            <div class="text">BBD TECH</div>
-                        </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                    <div class="info-box bg-cyan hover-expand-effect">
-                        <div class="icon">
-                            <i class="material-icons">local_hospital</i>
+                    <a href="/Home/ChallengePanel">
+                        <div class="info-box bg-cyan hover-expand-effect">
+                            <div class="icon">
+                                <i class="material-icons">local_hospital</i>
+                            </div>
+                            <div class="content">
+                                <div class="text">BBD HEALTH</div>
+                            </div>
                         </div>
-                        <div class="content">
-                            <div class="text">BBD HEALTH</div>
+                        </a>
+                 </div>
+                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                    <a href="/Home/ChallengePanel">
+                        <div class="info-box bg-light-green hover-expand-effect">
+                            <div class="icon">
+                                <i class="material-icons">fitness_center</i>
+                            </div>
+                            <div class="content">
+                                <div class="text">BBD SPORT</div>
+                            </div>
                         </div>
-                    </div>
+                        </a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                    <div class="info-box bg-light-green hover-expand-effect">
-                        <div class="icon">
-                            <i class="material-icons">fitness_center</i>
+                    <a href="/Home/ChallengePanel">
+                        <div class="info-box bg-orange hover-expand-effect">
+                            <div class="icon">
+                                <i class="material-icons">share</i>
+                            </div>
+                            <div class="content">
+                                <div class="text">BBD SOCIAL</div>
+                            </div>
                         </div>
-                        <div class="content">
-                            <div class="text">BBD SPORT</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                    <div class="info-box bg-orange hover-expand-effect">
-                        <div class="icon">
-                            <i class="material-icons">share</i>
-                        </div>
-                        <div class="content">
-                            <div class="text">BBD SOCIAL</div>
-                        </div>
-                    </div>
+                        </a>
                 </div>
             </div>
             <!-- #END# Widgets -->
@@ -353,44 +361,52 @@
             <!-- Widgets -->
             <div class="row clearfix">
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                    <div class="info-box bg-grey hover-expand-effect">
-                        <div class="icon">
-                            <i class="material-icons">people_outline</i>
+                    <a href="/Home/ChallengePanel">
+                        <div class="info-box bg-grey hover-expand-effect">
+                            <div class="icon">
+                                <i class="material-icons">people_outline</i>
+                            </div>
+                            <div class="content">
+                                <div class="text">BBD TEAMS</div>
+                            </div>
                         </div>
-                        <div class="content">
-                            <div class="text">BBD TEAMS</div>
-                        </div>
-                    </div>
+                        </a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                    <div class="info-box bg-purple hover-expand-effect">
-                        <div class="icon">
-                            <i class="material-icons">book</i>
+                    <a href="/Home/ChallengePanel">
+                        <div class="info-box bg-purple hover-expand-effect">
+                            <div class="icon">
+                                <i class="material-icons">book</i>
+                            </div>
+                            <div class="content">
+                                <div class="text">BBD TRAINING</div>
+                            </div>
                         </div>
-                        <div class="content">
-                            <div class="text">BBD TRAINING</div>
-                        </div>
-                    </div>
+                        </a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                    <div class="info-box bg-brown hover-expand-effect">
-                        <div class="icon">
-                            <i class="material-icons">forum</i>
+                    <a href="/Home/ChallengePanel">
+                        <div class="info-box bg-brown hover-expand-effect">
+                            <div class="icon">
+                                <i class="material-icons">forum</i>
+                            </div>
+                            <div class="content">
+                                <div class="text">BBD OUTREACH</div>
+                            </div>
                         </div>
-                        <div class="content">
-                            <div class="text">BBD OUTREACH</div>
-                        </div>
-                    </div>
+                        </a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                    <div class="info-box bg-blue hover-expand-effect">
-                        <div class="icon">
-                            <i class="material-icons">help</i>
+                    <a href="/Home/ChallengePanel">
+                        <div class="info-box bg-blue hover-expand-effect">
+                            <div class="icon">
+                                <i class="material-icons">help</i>
+                            </div>
+                            <div class="content">
+                                <div class="text">BBD MISC</div>
+                            </div>
                         </div>
-                        <div class="content">
-                            <div class="text">BBD MISC</div>
-                        </div>
-                    </div>
+                        </a>
                 </div>
             </div>
             <!-- #END# Widgets -->
@@ -466,32 +482,35 @@
                     </div>
                 </div>
                 <!-- #END# Answered Tickets -->
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                    <div class="card">
-                        <div class="header bg-light-blue">
-                            <h2>
-                                BBD Feed <small>Facebook</small>
-                            </h2>
-                            <ul class="header-dropdown m-r--5">
-                                <li>
-                                    <a href="javascript:void(0);" data-toggle="cardloading" data-loading-effect="timer" data-loading-color="lightBlue">
-                                        <i class="material-icons">loop</i>
-                                    </a>
-                                </li>
-                                <li class="dropdown">
-                                    <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                        <i class="material-icons">more_vert</i>
-                                    </a>
-                                    <ul class="dropdown-menu pull-right">
-                                        <li><a href="javascript:void(0);">Action</a></li>
-                                        <li><a href="javascript:void(0);">Another action</a></li>
-                                        <li><a href="javascript:void(0);">Something else here</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="body fb_posts">
-                            <div class="fb-post" data-href="https://www.facebook.com/BBDsoftwaredevelopment/posts/10155981717277439:0" data-witdth="auto" data-show-text="true"><blockquote cite="https://www.facebook.com/BBDsoftwaredevelopment/posts/10155981717277439:0" class="fb-xfbml-parse-ignore"><p>BBD&#x2019;s Cloud Masters Challenge kicks off today. An internal staff hackathon &#x2013; winners will take home the title of 2017 Cloud Masters through problem-solving ideas to revolutionise the Cloud space!</p>Posted by <a href="https://www.facebook.com/BBDsoftwaredevelopment/">BBD</a> on&nbsp;<a href="https://www.facebook.com/BBDsoftwaredevelopment/posts/10155981717277439:0">Friday, August 11, 2017</a></blockquote></div>
+                
+                <div class="row clearfix">
+                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                        <div class="card">
+                            <div class="header bg-light-blue">
+                                <h2>
+                                    BBD Feed <small>Facebook</small>
+                                </h2>
+                                <ul class="header-dropdown m-r--5">
+                                    <li>
+                                        <a href="javascript:void(0);" data-toggle="cardloading" data-loading-effect="timer" data-loading-color="lightBlue">
+                                            <i class="material-icons">loop</i>
+                                        </a>
+                                    </li>
+                                    <li class="dropdown">
+                                        <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                            <i class="material-icons">more_vert</i>
+                                        </a>
+                                        <ul class="dropdown-menu pull-right">
+                                            <li><a href="javascript:void(0);">Action</a></li>
+                                            <li><a href="javascript:void(0);">Another action</a></li>
+                                            <li><a href="javascript:void(0);">Something else here</a></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="body fb_posts">
+                                <div class="fb-post" data-href="https://www.facebook.com/BBDsoftwaredevelopment/posts/10155981717277439:0" data-witdth="auto" data-show-text="true"><blockquote cite="https://www.facebook.com/BBDsoftwaredevelopment/posts/10155981717277439:0" class="fb-xfbml-parse-ignore"><p>BBD&#x2019;s Cloud Masters Challenge kicks off today. An internal staff hackathon &#x2013; winners will take home the title of 2017 Cloud Masters through problem-solving ideas to revolutionise the Cloud space!</p>Posted by <a href="https://www.facebook.com/BBDsoftwaredevelopment/">BBD</a> on&nbsp;<a href="https://www.facebook.com/BBDsoftwaredevelopment/posts/10155981717277439:0">Friday, August 11, 2017</a></blockquote></div>
+                            </div>
                         </div>
                     </div>
                 </div>
