--- a/BBDBank/Views/Shared/_Layout.cshtml
+++ b/BBDBank/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
@@ -18,11 +18,20 @@
     <!-- Waves Effect Css -->
     <link href="~/plugins/node-waves/waves.css" rel="stylesheet" />
 
+    <!-- Multi Select Css -->
+    <link href="~/plugins/multi-select/css/multi-select.css" rel="stylesheet">
+
+    <!-- Bootstrap Select Css -->
+    <link href="~/plugins/bootstrap-select/css/bootstrap-select.css" rel="stylesheet" />
+
     <!-- Animation Css -->
     <link href="~/plugins/animate-css/animate.css" rel="stylesheet" />
 
     <!-- Morris Chart Css-->
     <link href="~/plugins/morrisjs/morris.css" rel="stylesheet" />
+
+    <!-- Sweet Alert Css -->
+    <link href="~/plugins/sweetalert/sweetalert.css" rel="stylesheet" />
 
     <!-- Custom Css -->
     <link href="~/css/style.css" rel="stylesheet">
@@ -46,6 +55,21 @@
 
     <!-- Slimscroll Plugin Js -->
     <script src="~/plugins/jquery-slimscroll/jquery.slimscroll.js"></script>
+
+    <!-- Multi Select Plugin Js -->
+    <script src="~/plugins/multi-select/js/jquery.multi-select.js"></script>
+
+    <!-- Jquery Validation Plugin Css -->
+    <script src="~/plugins/jquery-validation/jquery.validate.js"></script>
+
+    <!-- JQuery Steps Plugin Js -->
+    <script src="~/plugins/jquery-steps/jquery.steps.js"></script>
+
+    <!-- Sweet Alert Plugin Js -->
+    <script src="~/plugins/sweetalert/sweetalert.min.js"></script>
+
+    <!-- Bootstrap Notify Plugin Js -->
+    <script src="~/plugins/bootstrap-notify/bootstrap-notify.js"></script>
 
     <!-- Waves Effect Plugin Js -->
     <script src="~/plugins/node-waves/waves.js"></script>
@@ -72,6 +96,8 @@
 
     <!-- Custom Js -->
     <script src="~/js/admin.js"></script>
+    <script src="~/js/pages/forms/form-wizard.js"></script>
+    <script src="~/js/pages/forms/advanced-form-elements.js"></script>
     <script src="~/js/pages/index.js"></script>
 
     <!-- Demo Js -->
